--- a/static/index.html
+++ b/static/index.html
@@ -19,8 +19,8 @@
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div>
-			<h1>Scott Klemmer</h1>
-			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
+			<h1>Rachel Luk</h1>
+			<p>Visual Arts &middot; Computer Science</p>
 		</div>
 
 
@@ -31,13 +31,13 @@
 		<div id="project1">
 			<a href="project.html">
 				<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image">
-				<p>Waiting in Line</p>
+				<p>Photo Editing</p>
 			</a>
 		</div>
 		<div id="project2">
 			<a href="project.html">
 				<img src="images/lorempixel.city.1.jpeg" alt="Lorem Pixel image">
-				<p>Needfinding</p>
+				<p>Cover Design</p>
 			</a>
 		</div>
 		<div id="project3">
@@ -49,13 +49,13 @@
 		<div id="project4">
 			<a href="project.html">
 				<img src="images/lorempixel.abstract.1.jpeg" alt="Lorem Pixel image">
-				<p>Heuristic Evaluation</p>
+				<p>Ink</p>
 			</a>
 		</div>
 		<div id="project5">
 			<a href="project.html">
 				<img src="images/lorempixel.abstract.8.jpeg" alt="Lorem Pixel image">
-				<p>Visualization</p>
+				<p>Abstract</p>
 			</a>
 		</div>
 		<div id="project6">
